src/objects/LITC_Session__c.object
<CustomObject>
    <description>New object to capture session information for Lilly IT Conference: Created by Preeti Grover on 21/08/2014:LITC</description>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>TEXT( FLOOR( Session_End_Date_Time__c - Session_Start_Date_Time__c ) ) + &apos; days &apos; +
TEXT( FLOOR( MOD((Session_End_Date_Time__c - Session_Start_Date_Time__c) * 1440, 1440) / 60) ) + &apos; hours &apos; +
TEXT( ROUND(MOD( MOD((Session_End_Date_Time__c - Session_Start_Date_Time__c) * 1440, 1440), 60), 2) ) + &apos; mins&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Speakers__c</fullName>
        <inlineHelpText>Key speakers at the Session</inlineHelpText>
        <label>Key Speakers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Location where the Session will be held</inlineHelpText>
        <label>Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <inlineHelpText>Synopsis of what the session is about</inlineHelpText>
        <label>Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in the criteria based sharing rule to give access to the users</description>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_End_Date_Time__c</fullName>
        <label>Session End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Session_Start_Date_Time__c</fullName>
        <description>Start time of the session</description>
        <inlineHelpText>Start time of the session</inlineHelpText>
        <label>Session Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <label>IT Conference</label>
    <listViews>
        <fullName>All_Session</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Session_Start_Date_Time__c</columns>
        <columns>Session_End_Date_Time__c</columns>
        <columns>Key_Speakers__c</columns>
        <columns>Overview__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Sessions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IT Conference</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>